--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Patrol buffers and flush periodically or when the buffer is full.",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/babel ./src --out-dir ./dist --presets es2015 --plugins syntax-async-functions,transform-regenerator"
+    "build": "./node_modules/.bin/babel ./src --out-dir ./dist --presets es2015 --plugins syntax-async-functions,transform-regenerator,transform-runtime"
   },
   "repository": {
     "type": "git",
@@ -26,13 +26,9 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.14.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "mocha": "^3.0.1",
-    "promise-results": "^0.6.2"
+    "babel-plugin-transform-runtime": "^6.15.0"
   }
 }
